--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "express-session": "^1.18.1",
     "framer-motion": "^11.13.1",
     "input-otp": "^1.4.2",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
     "next-themes": "^0.4.6",
@@ -65,6 +66,7 @@
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.7",
+    "react-vertical-timeline-component": "^3.5.3",
     "recharts": "^2.15.2",
     "swiper": "^11.2.10",
     "tailwind-merge": "^2.6.0",
